--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google-signin-client_id" content="10169129130-vtji558vgofivsphol7hq05u5ucuk83v.apps.googleusercontent.com.apps.googleusercontent.com">
 
     <title>Clone YOUTUBE</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/api.js"></script>
+
   </head>
   <body>
     <div id="root"></div>
+
+
   </body>
 </html>
